// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerPageDetails /> renders using an employer record 1`] = `
<div
  className="EmployerPageDetails__Container"
>
  <div
    className="EmployerPageDetails__Header"
  >
    <img
      className="EmployerLogo__Image"
      src="/images/employers/consoto.svg"
      style={
        Object {
          "background": "#fff",
        }
      }
    />
    <h1
      className="EmployerPageDetails__Title"
    >
      Contoso
    </h1>
    [component: EmployerRatingPill employer=([object Object]) isAnnotated=(undefined) /]
  </div>
  <div
    className="EmployerPageDetails__Summary"
  >
    <p>
      Contoso is a good company.
    </p>
    <div
      className="EmployerPageDetails__LastUpdated"
    >
      £áƭèƨƭ ïñƒôř₥áƭïôñ: 2020-6-1
    </div>
  </div>
  [component: EmployerCitationList citations=([object Object],[object Object],[object Object]) /]
  <div
    className="EmployerPageDetails__MetaFooter"
  >
    <div
      className="EmployerPageDetails__Profile"
    >
      <h2>
        É₥ƥℓô¥èř ƥřôƒïℓè
      </h2>
      <table
        className="EmployerPageDetails__ProfileDetails"
      >
        <tbody>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Tλè ïñçôřƥôřáƭèδ ñá₥è ôƒ ƭλè è₥ƥℓô¥èř."
            >
              <i
                className="material-icons"
              >
                work
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              Contoso
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Wλèřè ƭλè è₥ƥℓô¥èř'ƨ λèáδ9úářƭèřƨ ářè ℓôçáƭèδ."
            >
              <i
                className="material-icons"
              >
                place
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              City, Ûñïƭèδ §ƭáƭèƨ (Multinational)
              <img
                className="EmployerPageDetails__ProfileFlag"
                src="/images/flags/us.svg"
              />
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Tλè áƥƥřôжï₥áƭè ñú₥βèř ôƒ è₥ƥℓô¥èèƨ ƭλè çô₥ƥáñ¥ λáδ ƥřïôř ƭô ƭλè ÇôřôñáƲïřúƨ ƥáñδè₥ïç."
            >
              <i
                className="material-icons"
              >
                people
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              ~10,123 (2017)
              <span
                className="EmployerPageDetails__Delta EmployerPageDetails__Delta--Negative"
              >
                (
                -2,222 ƨïñçè 2015
                )
              </span>
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Tλè è₥ƥℓô¥èř'ƨ ôƒƒïçïáℓ ωèβƨïƭè ℓïñƙ."
            >
              <i
                className="material-icons"
              >
                flag
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              <a
                className="EmployerPageDetails__SubmitLink"
                href="/submit"
                onClick={[Function]}
              >
                §úβ₥ïƭ úƥδáƭè ƒôř Contoso
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="EmployerPageDetails__LinkedCompanies"
    />
  </div>
</div>
`;

exports[`<EmployerPageDetails /> renders without exploding 1`] = `
<div
  className="EmployerPageDetails__Container"
>
  <div
    className="EmployerPageDetails__Header"
  >
    <h1
      className="EmployerPageDetails__Title"
    >
      Employer
    </h1>
    [component: EmployerRatingPill employer=([object Object]) isAnnotated=(undefined) /]
  </div>
  <div
    className="EmployerPageDetails__Summary"
  />
  [component: EmployerCitationList citations=() /]
  <div
    className="EmployerPageDetails__MetaFooter"
  >
    <div
      className="EmployerPageDetails__Profile"
    >
      <h2>
        É₥ƥℓô¥èř ƥřôƒïℓè
      </h2>
      <table
        className="EmployerPageDetails__ProfileDetails"
      >
        <tbody>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Tλè ïñçôřƥôřáƭèδ ñá₥è ôƒ ƭλè è₥ƥℓô¥èř."
            >
              <i
                className="material-icons"
              >
                work
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              Employer
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="Tλè è₥ƥℓô¥èř'ƨ ôƒƒïçïáℓ ωèβƨïƭè ℓïñƙ."
            >
              <i
                className="material-icons"
              >
                flag
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              <a
                className="EmployerPageDetails__SubmitLink"
                href="/submit"
                onClick={[Function]}
              >
                §úβ₥ïƭ úƥδáƭè ƒôř Employer
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="EmployerPageDetails__LinkedCompanies"
    />
  </div>
</div>
`;
